--- a/index.html
+++ b/index.html
@@ -10,31 +10,55 @@
     <script src="/javascripts/site.js"></script>
   </head>
   <body>
-    <div id="wrapper">
-  <div>
-    <h2>www.turai.work</h2>
-    <ul>
-        <li>
-          <a href="https://twitter.com/amanekey" target="_blank">
-            <i class="fa fa-twitter fa-fw"></i>Twitter
-          </a>
-        </li>
-        <li>
-          <a href="http://thr3a.hatenablog.com/" target="_blank">
-            <i class="fa fa-rss fa-fw"></i>Blog
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/thr3a" target="_blank">
-            <i class="fa fa-github fa-fw"></i>Github
-          </a>
-        </li>
-        <li>
-          <a href="http://qiita.com/thr3a" target="_blank">
-            <i class="fa fa-book fa-fw"></i>Qiita
-          </a>
-        </li>
-    </ul>
+    
+<div id="wrapper">
+  <div id="title">
+    <h2>turai.work</h2>
+  </div>
+  <div class="row">
+    <div class="col">
+      <ul>
+          <li>
+            <a href="https://twitter.com/amanekey" target="_blank">
+              <i class="fa fa-twitter fa-fw"></i>Twitter
+            </a>
+          </li>
+          <li>
+            <a href="http://thr3a.hatenablog.com/" target="_blank">
+              <i class="fa fa-rss fa-fw"></i>Blog
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/thr3a" target="_blank">
+              <i class="fa fa-github fa-fw"></i>Github
+            </a>
+          </li>
+          <li>
+            <a href="http://qiita.com/thr3a" target="_blank">
+              <i class="fa fa-book fa-fw"></i>Qiita
+            </a>
+          </li>
+      </ul>
+    </div>
+    <div class="col">
+      <ul>
+          <li>
+            <a href="http://niconico.turai.work/" target="_blank">
+              <i class="fa fa-history fa-fw"></i>ニコニコ動画タイムマシン
+            </a>
+          </li>
+          <li>
+            <a href="http://nyan.turai.work/" target="_blank">
+              <i class="fa fa-twitter fa-fw"></i>にゃーんチェッカー
+            </a>
+          </li>
+          <li>
+            <a href="http://namequiz.turai.work/" target="_blank">
+              <i class="fa fa-firefox fa-fw"></i>Firefox or FireFoxゲーム
+            </a>
+          </li>
+      </ul>
+    </div>
   </div>
 </div>
 
